welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: illegal start of simple expression
      if (estFaceMur()) [
                        ^