welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  setCouleurBrosse(Color.YELLOW)
  baisseBrosse()
  while (fonctionTest() == false) {
    serpent()
  }
  
  def fonctionTest(): Boolean = {
    if (estFaceMur() && getDirection() == Direction.OUEST) {
      droite()
      if (estFaceMur()) [
        gauche()
        return true
      ]
    }
    if (estFaceMur() && getDirection() == Direction.EST) {
      gauche()
      if (estFaceMur()) {
        droite()
        return true
      }
    }
    return false
  }
def serpent() {  
    while (!estFaceMur()) {
      avance()
    }
      if (getDirection() == Direction.OUEST) {
        droite()
        avance()
        droite()
      }
      if (getDirection() == Direction.EST) {
        gauche()
        avance()
        gauche()
      }
}
}